--- a/index.html
+++ b/index.html
@@ -97,28 +97,71 @@
 
 
 
-    <!-- Hero Start -->
-    <div class="container-fluid bg-primary py-5 mb-5 hero-header">
-        <div class="container py-5">
+<div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
+    <div class="carousel-inner">
+      <div class="carousel-item active" data-bs-interval="10000">
+        <div class="container-fluid bg-primary py-5 mb-5 hero-header">
+          <div class="container py-5">
             <div class="row justify-content-start">
-                <div class="col-lg-8 text-center text-lg-start">
-                    <h1 class="font-secondary text-primary mb-4">Super Creamy</h1>
-                    <h1 class="display-1 text-uppercase text-white mb-4">Deh Deepya's Cake Factory</h1>
-                    <h1 class="text-uppercase text-white">Get The Best Cakes In Vizag</h1>
-                    
-                    <div class="d-flex align-items-center justify-content-center justify-content-lg-start pt-5">
-                        <a href="" class="btn btn-primary border-inner py-3 px-5 me-5">Read More</a>
-                        <button type="button" class="btn-play" data-bs-toggle="modal"
-                            data-src="https://www.youtube.com/embed/DWRcNpR6Kdc" data-bs-target="#videoModal">
-                            <span></span>
-                        </button>
-                        <h5 class="font-weight-normal text-white m-0 ms-4 d-none d-sm-block">Play Video</h5>
-                    </div>
-                </div>
+              <div class="col-lg-8 text-center text-lg-start">
+                <h1 class="font-secondary text-primary mb-4">Super Creamy</h1>
+                <h1 class="display-1 text-uppercase text-white mb-4">Deh Deepya's Cake Factory</h1>
+                <h1 class="text-uppercase text-white">Get The Best Cakes In Vizag</h1>
+              </div>
             </div>
+          </div>
         </div>
+      </div>
+      <div class="carousel-item" data-bs-interval="2000">
+        <div class="container-fluid bg-primary py-5 mb-5 hero-header1">
+            <div class="container py-5">
+              <div class="row justify-content-start">
+                <div class="col-lg-8 text-center text-lg-start">
+                  <h1 class="font-secondary text-primary mb-4">Super Creamy</h1>
+                  <h1 class="display-1 text-uppercase text-white mb-4">Deh Deepya's Cake Factory</h1>
+                  <h1 class="text-uppercase text-white">Get The Best Cakes In Vizag</h1>
+                </div>
+              </div>
+            </div>
+          </div>
+      </div>
+      <div class="carousel-item">
+        <div class="container-fluid bg-primary py-5 mb-5 hero-header">
+            <div class="container py-5">
+              <div class="row justify-content-start">
+                <div class="col-lg-8 text-center text-lg-start">
+                  <h1 class="font-secondary text-primary mb-4">Super Creamy</h1>
+                  <h1 class="display-1 text-uppercase text-white mb-4">Deh Deepya's Cake Factory</h1>
+                  <h1 class="text-uppercase text-white">Get The Best Cakes In Vizag</h1>
+                </div>
+              </div>
+            </div>
+          </div>
+      </div>
+      <div class="carousel-item" data-bs-interval="2000">
+        <div class="container-fluid bg-primary py-5 mb-5 hero-header1">
+            <div class="container py-5">
+              <div class="row justify-content-start">
+                <div class="col-lg-8 text-center text-lg-start">
+                  <h1 class="font-secondary text-primary mb-4">Super Creamy</h1>
+                  <h1 class="display-1 text-uppercase text-white mb-4">Deh Deepya's Cake Factory</h1>
+                  <h1 class="text-uppercase text-white">Get The Best Cakes In Vizag</h1>
+                </div>
+              </div>
+            </div>
+          </div>
+      </div>
     </div>
-    <!-- Hero End -->
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </button>
+  </div>
+  
 
 
     <!-- Video Modal Start -->
@@ -553,7 +596,7 @@
                 <div class="col-lg-4 col-md-6 mb-lg-n5">
                     <div class="d-flex flex-column align-items-center justify-content-center text-center h-100 bg-primary border-inner p-4">
                         <a href="index.html" class="navbar-brand">
-                            <h1 class="m-0 text-uppercase text-white"><i class="fa fa-birthday-cake fs-1 text-dark me-3"></i>Deh Deepya's Cake Factory</h1>
+                            <h1 class="m-0 text-uppercase text-white"><i class="fa fa-birthday-cake fs-1 text-dark me-3"></i>Deh Deepya's<br> Cake Factory</h1>
                         </a>
                         <p class="mt-3">Lorem diam sit erat dolor elitr et, diam lorem justo labore amet clita labore stet eos magna sit. Elitr dolor eirmod duo tempor lorem, elitr clita ipsum sea. Nonumy rebum et takimata ea takimata amet gubergren, erat rebum magna lorem stet eos. Diam amet et kasd eos duo dolore no.</p>
                     </div>
